--- a/clash-mini-globe-noicon.ini
+++ b/clash-mini-globe-noicon.ini
@@ -1,4 +1,4 @@
-;1、域名组
+;1、域名组（）
 ruleset=AI1,https://gh-proxy.com/raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/AI.list
 ruleset=AI2,https://gh-proxy.com/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
 ruleset=TikTok,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
