--- a/zashboard-settings-02.json
+++ b/zashboard-settings-02.json
@@ -15,7 +15,7 @@
   "config/use-connecticon-card": "false",
   "config/min-proxy-card-width": "155",
   "config/swipe-in-tabs": "false",
-  "config/import-settings-url": "https://raw.githubusercontent.com/liandu2024/little/refs/heads/main/zashboard/zashboard-20250417.json",
+  "config/import-settings-url": "https://raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/zashboard-settings-02.json",
   "config/proxy-preview-type": "dots",
   "config/use-smart-group-sort": "false",
   "config/table-width-mode": "auto",
@@ -57,7 +57,7 @@
   "config/connection-table-columns": "[\"close\",\"sourceIP\",\"host\",\"chains\",\"dlSpeed\",\"ulSpeed\",\"type\",\"remoteAddress\",\"rule\",\"dl\",\"ul\",\"connectTime\"]",
   "config/auto-disconnect-idle-udp-time": "300",
   "config/table-column-pinning": "{\"left\":[],\"right\":[]}",
-  "setup/api-list": "[{\"protocol\":\"http\",\"host\":\"192.168.3.1\",\"port\":\"9090\",\"secondaryPath\":\"\",\"password\":\"123456\",\"label\":\"内网\",\"disableUpgradeCore\":false,\"uuid\":\"1ea5b0b8-c2db-467a-b22a-afb54c2775b6\"},{\"protocol\":\"http\",\"host\":\"10.0.1.2\",\"port\":\"9090\",\"secondaryPath\":\"\",\"password\":\"123456\",\"label\":\"\",\"uuid\":\"80864188-df95-4be3-95f5-0e60f2af4805\"}]",
+  "setup/api-list": "[{\"protocol\":\"http\",\"host\":\"10.0.1.2\",\"port\":\"9090\",\"secondaryPath\":\"\",\"password\":\"123456\",\"label\":\"\",\"uuid\":\"80864188-df95-4be3-95f5-0e60f2af4805\"}]",
   "config/proxies-count-mode": "aliveTotal",
   "config/proxy-card-size": "large",
   "config/log-search-history": "[\"牛逼\",\"所有\",\"香港\",\"cnn.com\",\"cnn\"]",
