--- a/clash-mini-globe-noicon.ini
+++ b/clash-mini-globe-noicon.ini
@@ -8,6 +8,7 @@ ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/io
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
+ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/Direct.list
 ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
 ;ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
