--- a/clash-mini-globe-noicon.ini
+++ b/clash-mini-globe-noicon.ini
@@ -1,5 +1,4 @@
 ;1、域名组
-ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/Direct.list
 ruleset=AI1,https://gh-proxy.com/raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/AI.list
 ruleset=AI2,https://gh-proxy.com/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/AI2.list
 ruleset=TikTok,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -9,9 +8,13 @@ ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/io
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=流媒体,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
+ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/KevinKU3170/MyRule/refs/heads/main/Direct.list
 ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
 ;ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMax/ChinaMax.list
 ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
+ruleset=国内,[]GEOSITE,CN
+ruleset=国外,[]GEOSITE,geolocation-!cn
+ruleset=国内,[]GEOIP,CN,no-resolve
 ruleset=国外,[]FINAL
 
 ;2、策略组（域名组-节点组）
