Comment out domestic GEOIP ruleset
Comment out the GEOIP ruleset for domestic traffic.

--- a/clash-mini-globe-noicon.ini
+++ b/clash-mini-globe-noicon.ini
@@ -14,7 +14,7 @@ ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/liandu2024/clash/r
 ruleset=国内,https://gh-proxy.com/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
 ruleset=国内,[]GEOSITE,CN
 ruleset=国外,[]GEOSITE,geolocation-!cn
-:ruleset=国内,[]GEOIP,CN,no-resolve
+;ruleset=国内,[]GEOIP,CN,no-resolve
 ruleset=国外,[]FINAL
 
 ;2、策略组（域名组-节点组）
